<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:orientation="vertical">

    <Button
        android:id="@+id/reset_points"
        style="@style/main_page_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_button_drawable"
        android:clickable="true"
        android:focusable="true"
        android:onClick="resetPoints"
        android:text="@string/reset_points"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.716" />

    <ImageButton
        android:id="@+id/image_button_9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_7"
        app:layout_constraintEnd_toEndOf="@+id/image_button_6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_button_6"
        app:layout_constraintTop_toTopOf="@+id/image_button_7"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageButton
        android:id="@+id/image_button_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_1"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/image_button_1"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageButton
        android:id="@+id/image_button_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_4"
        app:layout_constraintEnd_toEndOf="@+id/image_button_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_button_3"
        app:layout_constraintTop_toTopOf="@+id/image_button_4"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageButton
        android:id="@+id/image_button_8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_7"
        app:layout_constraintEnd_toEndOf="@+id/image_button_5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/image_button_5"
        app:layout_constraintTop_toTopOf="@+id/image_button_7"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageButton
        android:id="@+id/image_button_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_4"
        app:layout_constraintEnd_toEndOf="@+id/image_button_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/image_button_2"
        app:layout_constraintTop_toTopOf="@+id/image_button_4"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageButton
        android:id="@+id/image_button_7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/image_button_4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_button_4"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.9"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <ImageButton
        android:id="@+id/image_button_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/image_button_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/image_button_1"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.503"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <ImageButton
        android:id="@+id/image_button_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.513"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageButton
        android:id="@+id/image_button_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:onClick="placeMove"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_1"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/image_button_1"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageView
        android:id="@+id/player2_image"
        android:layout_width="112dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/x_and_o"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/player1_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player1_image"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <ImageView
        android:id="@+id/player1_image"
        android:layout_width="112dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/x_and_o"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="380dp"
        android:layout_height="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.65999997" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="4dp"
        android:layout_height="380dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/player2_score_text"
        android:layout_width="40dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/player1_score_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player1_score_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/player1_score_text"
        android:layout_width="40dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="4dp"
        android:layout_height="382dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1_image" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="380dp"
        android:layout_height="4dp"
        android:layout_marginBottom="260dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
